# lab-passbolt-py

./: .gitignore  README.md  config.json.gnupg.sample  config.json.sample  example.py  passbolt.py  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py
passbolt/: __init__.py  howtobuild.txt  passbolt.py
