[metadata]
name = py-passbolt
description = Python library for Passbolt, an open-source manager for teams
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = 0.0.16
url = https://github.com/passbolt/lab-passbolt-py
author = Jean-Christophe Vassort
author_email = anatomicjc@open-web.fr
license = MIT-0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Documentation = https://github.com/passbolt/lab-passbolt-py/blob/main/README.md
    Source = https://github.com/passbolt/lab-passbolt-py
    Tracker = https://github.com/passbolt/lab-passbolt-py/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    httpx ==0.23.3
    PGPy ==0.6.0
    python-gnupg ==0.5.0
python_requires = >=3.6
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
